Ajuste em instancias do ADOContext. Fix bug para classes dentro da classe.

--- a/test/ADO.Test/ADO.Test.csproj
+++ b/test/ADO.Test/ADO.Test.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestClass.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
